@@ -30,9 +30,9 @@ deb-snapshot:
 	 "snapshot build"
 	debuild binary
 
-.PHONY: docs apidocs paper
+.PHONY: docs apidocs some-apidocs paper
 docs:
-	$(MAKE) -C docs buildbot.info
+	$(MAKE) -C docs buildbot.info buildbot.html
 
 apidocs:
 	PYTHONPATH=.:$(T) python docs/epyrun -o docs/reference
@@ -41,12 +41,12 @@ some-apidocs:
 paper:
 	$(MAKE) -C docs/PyCon-2003 all
 
-release: docs paper
+release: docs
 	chmod 0755 .
 	find buildbot contrib docs -type d -exec chmod 0755 {} \;
 	find bin buildbot contrib docs -type f -exec chmod 0644 {} \;
 	chmod 0644 ChangeLog MANIFEST* NEWS README* setup.py
-	chmod a+x bin/buildbot contrib/*.py
+	chmod a+x bin/buildbot contrib/*.py contrib/windows/*.py
 	rm -rf _trial_temp
 	python ./setup.py clean
 	rm -f MANIFEST
